// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterLabelContent /> should render with no data 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "labels.console",
        "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
        "type": "label",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "labels.console",
          "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
          "type": "label",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  height: 8px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  color: #b3b3b3;
}

.emotion-1 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  height: auto;
}

<label
    className="emotion-0"
  >
    Scope
    <div
      className="emotion-1"
    >
      <select
        className="emotion-2"
        defaultValue="all"
        disabled={true}
        onChange={[Function]}
      >
        <option
          disabled={true}
          value=""
        >
          Select an option...
        </option>
        <option
          value="all"
        >
          All
        </option>
        <option
          value="test"
        >
          Test
        </option>
        <option
          value="train"
        >
          Train
        </option>
      </select>
    </div>
  </label>,
  .emotion-0 {
  height: 8px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  padding-bottom: 16px;
}

.emotion-1 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-1::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  font-style: italic;
}

.emotion-1::placeholder {
  font-style: italic;
}

.emotion-1:hover {
  border: 1px solid #808080;
}

.emotion-1:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-0"
  >
    <input
      aria-label="Filter labels"
      className="emotion-1"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value=""
    />
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-1 {
  font-style: italic;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Labels
       Selected:
       
      0
    </div>
    <div>
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      LABEL
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    className="emotion-0"
  />,
]
`;

exports[`<FilterLabelContent /> should select a label 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "labels.console",
        "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
        "type": "label",
        "values": Object {
          "labels": Array [],
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "labels.console",
          "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
          "type": "label",
          "values": Object {
            "labels": Array [],
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  height: 8px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  color: #b3b3b3;
}

.emotion-1 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  height: auto;
}

<label
    className="emotion-0"
  >
    Scope
    <div
      className="emotion-1"
    >
      <select
        className="emotion-2"
        defaultValue="all"
        disabled={true}
        onChange={[Function]}
      >
        <option
          disabled={true}
          value=""
        >
          Select an option...
        </option>
        <option
          value="all"
        >
          All
        </option>
        <option
          value="test"
        >
          Test
        </option>
        <option
          value="train"
        >
          Train
        </option>
      </select>
    </div>
  </label>,
  .emotion-0 {
  height: 8px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  padding-bottom: 16px;
}

.emotion-1 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-1::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  font-style: italic;
}

.emotion-1::placeholder {
  font-style: italic;
}

.emotion-1:hover {
  border: 1px solid #808080;
}

.emotion-1:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-0"
  >
    <input
      aria-label="Filter labels"
      className="emotion-1"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value=""
    />
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-1 {
  font-style: italic;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Labels
       Selected:
       
      0
    </div>
    <div>
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      LABEL
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: transparent;
  width: 100%;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-2 {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  width: 100%;
  border-top: 4px solid #808080;
}

.emotion-5 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-7 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-8 {
  padding-left: 8px;
}

.emotion-12 {
  width: 80%;
  border-top: 4px solid #808080;
}

.emotion-13 {
  height: 4px;
  width: 20%;
  border-top: 1px solid #3b3b3b;
}

.emotion-20 {
  width: 60%;
  border-top: 4px solid #808080;
}

.emotion-21 {
  height: 4px;
  width: 40%;
  border-top: 1px solid #3b3b3b;
}

.emotion-28 {
  width: 40%;
  border-top: 4px solid #808080;
}

.emotion-29 {
  height: 4px;
  width: 60%;
  border-top: 1px solid #3b3b3b;
}

.emotion-36 {
  width: 0%;
  border-top: 4px solid #808080;
}

.emotion-37 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

<ul
    className="emotion-0"
  >
    <li>
      <button
        aria-label="Ford"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            />
            <div
              className="emotion-5"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Ford
            </div>
            <div
              className="emotion-8"
            >
              5
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Chevrolet"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-12"
            />
            <div
              className="emotion-13"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Chevrolet
            </div>
            <div
              className="emotion-8"
            >
              4
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Peugeot"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-20"
            />
            <div
              className="emotion-21"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Peugeot
            </div>
            <div
              className="emotion-8"
            >
              3
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Audi"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-28"
            />
            <div
              className="emotion-29"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Audi
            </div>
            <div
              className="emotion-8"
            >
              2
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Toyota"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-36"
            />
            <div
              className="emotion-37"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Toyota
            </div>
            <div
              className="emotion-8"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;

exports[`<FilterLabelContent /> should unselect a label 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "labels.console",
        "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
        "type": "label",
        "values": Object {
          "labels": Array [
            "Ford",
          ],
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "labels.console",
          "datasetId": "4b0b10a8-cec1-155c-b12f-ee2bc8787e06",
          "type": "label",
          "values": Object {
            "labels": Array [
              "Ford",
            ],
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  height: 8px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  color: #b3b3b3;
}

.emotion-1 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  height: auto;
}

<label
    className="emotion-0"
  >
    Scope
    <div
      className="emotion-1"
    >
      <select
        className="emotion-2"
        defaultValue="all"
        disabled={false}
        onChange={[Function]}
      >
        <option
          disabled={true}
          value=""
        >
          Select an option...
        </option>
        <option
          value="all"
        >
          All
        </option>
        <option
          value="test"
        >
          Test
        </option>
        <option
          value="train"
        >
          Train
        </option>
      </select>
    </div>
  </label>,
  .emotion-0 {
  height: 8px;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  padding-bottom: 16px;
}

.emotion-1 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-1::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  font-style: italic;
}

.emotion-1::placeholder {
  font-style: italic;
}

.emotion-1:hover {
  border: 1px solid #808080;
}

.emotion-1:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-0"
  >
    <input
      aria-label="Filter labels"
      className="emotion-1"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value=""
    />
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-1 {
  font-style: italic;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      Labels
       Selected:
       
      1
    </div>
    <div>
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      LABEL
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #0074f538;
  width: 100%;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-2 {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  width: 100%;
  border-top: 4px solid #3A5DFF;
}

.emotion-5 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-7 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-8 {
  padding-left: 8px;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: transparent;
  width: 100%;
}

.emotion-9:hover,
.emotion-9.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-12 {
  width: 80%;
  border-top: 4px solid #808080;
}

.emotion-13 {
  height: 4px;
  width: 20%;
  border-top: 1px solid #3b3b3b;
}

.emotion-20 {
  width: 60%;
  border-top: 4px solid #808080;
}

.emotion-21 {
  height: 4px;
  width: 40%;
  border-top: 1px solid #3b3b3b;
}

.emotion-28 {
  width: 40%;
  border-top: 4px solid #808080;
}

.emotion-29 {
  height: 4px;
  width: 60%;
  border-top: 1px solid #3b3b3b;
}

.emotion-36 {
  width: 0%;
  border-top: 4px solid #808080;
}

.emotion-37 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

<ul
    className="emotion-0"
  >
    <li>
      <button
        aria-label="Ford"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            />
            <div
              className="emotion-5"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Ford
            </div>
            <div
              className="emotion-8"
            >
              5
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Chevrolet"
        className="emotion-9"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-12"
            />
            <div
              className="emotion-13"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Chevrolet
            </div>
            <div
              className="emotion-8"
            >
              4
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Peugeot"
        className="emotion-9"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-20"
            />
            <div
              className="emotion-21"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Peugeot
            </div>
            <div
              className="emotion-8"
            >
              3
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Audi"
        className="emotion-9"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-28"
            />
            <div
              className="emotion-29"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Audi
            </div>
            <div
              className="emotion-8"
            >
              2
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="Toyota"
        className="emotion-9"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-36"
            />
            <div
              className="emotion-37"
            />
          </div>
          <div
            className="emotion-6"
          >
            <div
              className="emotion-7"
            >
              Toyota
            </div>
            <div
              className="emotion-8"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;
